argocd/vkr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vkr-deployment
  labels:
    app: vkr
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vkr
  template:
    metadata:
      labels:
        app: vkr
    spec:
      containers:
      - name: vkr
        image: dteplov/vkr-demo:latest
        ports:
        - containerPort: 8080
