argocd/vkr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vkr-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - synergy.qapeclix2.fun
    secretName: vkr-tls
  rules:
  - host: synergy.qapeclix2.fun
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vkr-service
            port:
              number: 80
